BradkenProduction/force-app/main/default/objects/Invoice__c/fields/ApplyTo__c.field-meta.xml
<CustomField>
    <fullName>ApplyTo__c</fullName>
    <description>Apply To determines the Parent Invoice ID this record is associated to. Sent from Unibis. In most cases &apos;ApplyTo&apos; for Invoice would be its own Document ID</description>
    <label>Apply To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>