BradkenProduction/force-app/main/default/objects/Invoice__c/fields/Buckets__c.field-meta.xml
<CustomField>
    <fullName>Buckets__c</fullName>
    <formula>IF
(
  Debtors_Bucket_1__c &gt; 0,
  &quot;Current&quot;,
  IF
  (
    Debtors_Bucket_2__c &gt; 0,
    &quot;Overdue 1 month&quot;,
    IF
    (
      Debtors_Bucket_3__c &gt; 0,
      &quot;Overdue 2 months&quot;,
      IF
      (
        Debtors_Bucket_4__c &gt; 0,
        &quot;Overdue 3 months&quot;,
        IF
        (
          Debtors_Bucket_5__c &gt; 0,
          &quot;Overdue 4 months&quot;,
          &quot;Paid&quot;
        )
      )
    )
  )
)</formula>
    <label>Buckets</label>
    <type>Text</type>
</CustomField>