BradkenProduction/force-app/main/default/objects/Invoice__c/fields/CurrencyCodeLocal__c.field-meta.xml
<CustomField>
    <fullName>CurrencyCodeLocal__c</fullName>
    <description>Currency code of the local bradken entity under which this invoice is processed for e,g, for AUD for Bradken Australia, ZAR for Bradken South Africa</description>
    <label>Currency Code Local</label>
    <length>3</length>
    <type>Text</type>
</CustomField>