BradkenProduction/force-app/main/default/objects/Invoice__c/fields/Debtors_Bucket_1__c.field-meta.xml
<CustomField>
    <fullName>Debtors_Bucket_1__c</fullName>
    <description>Outstanding Amount in Bucket 1</description>
    <label>Current</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>