BradkenProduction/force-app/main/default/objects/Invoice__c/fields/Debtors_Bucket_2__c.field-meta.xml
<CustomField>
    <fullName>Debtors_Bucket_2__c</fullName>
    <description>Outstanding Amount in Bucket 2</description>
    <label>Overdue 1 month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>