BradkenProduction/force-app/main/default/objects/Invoice__c/fields/Debtors_Bucket_3__c.field-meta.xml
<CustomField>
    <fullName>Debtors_Bucket_3__c</fullName>
    <description>Outstanding Amount in Bucket 3</description>
    <label>Overdue 2 months</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>