BradkenProduction/force-app/main/default/objects/Invoice__c/fields/Debtors_Bucket_Label_1__c.field-meta.xml
<CustomField>
    <fullName>Debtors_Bucket_Label_1__c</fullName>
    <description>Label for Bucket 1. Will always have the value &apos;Current&apos;</description>
    <label>Not Overdue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>