BradkenProduction/force-app/main/default/objects/Invoice__c/fields/Debtors_Bucket_Label_3__c.field-meta.xml
<CustomField>
    <fullName>Debtors_Bucket_Label_3__c</fullName>
    <description>Label for Bucket 1. Will always have the value &apos;60 Days&apos;</description>
    <label>31 - 60 days Overdue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>