BradkenProduction/force-app/main/default/objects/Invoice__c/fields/DocumentDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentDate__c</fullName>
    <description>This is date of creation of the Invoice</description>
    <inlineHelpText>Creation Date</inlineHelpText>
    <label>Document Date</label>
    <type>Date</type>
</CustomField>