BradkenProduction/force-app/main/default/objects/Invoice__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <description>The date by which the Invoice is expected to be paid by the Customer</description>
    <inlineHelpText>Customer Payment Due Date</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>