BradkenProduction/force-app/main/default/objects/Invoice__c/fields/ExpectedPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>ExpectedPaymentDate__c</fullName>
    <description>The date by which the customer has confirmed to pay the invoice</description>
    <inlineHelpText>Customer confirmed Payment Date</inlineHelpText>
    <label>Expected Payment Date</label>
    <type>Date</type>
</CustomField>