BradkenProduction/force-app/main/default/objects/Invoice__c/fields/FollowUpTaskCreated__c.field-meta.xml
<CustomField>
    <fullName>FollowUpTaskCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Follow Up Task Created</label>
    <type>Checkbox</type>
</CustomField>