BradkenProduction/force-app/main/default/objects/Invoice__c/fields/HistoricalSalesRep__c.field-meta.xml
<CustomField>
    <fullName>HistoricalSalesRep__c</fullName>
    <description>Previous owner of the Invoice. This Sales Rep has left the organisation</description>
    <label>Historical Sales Rep</label>
    <length>50</length>
    <type>Text</type>
</CustomField>