BradkenProduction/force-app/main/default/objects/Invoice__c/fields/InternalComments__c.field-meta.xml
<CustomField>
    <fullName>InternalComments__c</fullName>
    <label>Internal Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>