BradkenProduction/force-app/main/default/objects/Invoice__c/fields/InvoiceAmountinLocal__c.field-meta.xml
<CustomField>
    <fullName>InvoiceAmountinLocal__c</fullName>
    <description>Amount in local currency. This field holds the amount (number) only, the currency is stored in a separate field</description>
    <label>Invoice Amount in Local</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>