BradkenProduction/force-app/main/default/objects/Invoice__c/fields/Local_Invoice_Comments__c.field-meta.xml
<CustomField>
    <fullName>Local_Invoice_Comments__c</fullName>
    <label>Local Invoice Comments</label>
    <type>TextArea</type>
</CustomField>