BradkenProduction/force-app/main/default/objects/Invoice__c/fields/OrderRecordID__c.field-meta.xml
<CustomField>
    <fullName>OrderRecordID__c</fullName>
    <description>Order ID</description>
    <formula>UnibisSalesOrder__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OrderRecordID</label>
    <type>Text</type>
</CustomField>