BradkenProduction/force-app/main/default/objects/Invoice__c/fields/OutstandingAmountinLocal__c.field-meta.xml
<CustomField>
    <fullName>OutstandingAmountinLocal__c</fullName>
    <description>Outstanding Amount in local currency. This field holds the amount (number) only, the currency is stored in a separate field</description>
    <label>Outstanding Amount in Local</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>