BradkenProduction/force-app/main/default/objects/Invoice__c/fields/PaidDate__c.field-meta.xml
<CustomField>
    <fullName>PaidDate__c</fullName>
    <description>The date on which the invoice is paid in full by the customer</description>
    <label>Paid Date</label>
    <type>Date</type>
</CustomField>