BradkenProduction/force-app/main/default/objects/Invoice__c/fields/PurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrder__c</fullName>
    <description>The Purchase Order Number associated for the Invoice</description>
    <label>Customer Purchase Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>