BradkenProduction/force-app/main/default/objects/Invoice__c/fields/RecordLocked__c.field-meta.xml
<CustomField>
    <fullName>RecordLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the record is locked or unlocked. A record is locked once the Invoice is Paid. Only Admins and Integration users can edit a locked record.</description>
    <label>Record Locked</label>
    <type>Checkbox</type>
</CustomField>