BradkenProduction/force-app/main/default/objects/Invoice__c/fields/SalesRep__c.field-meta.xml
<CustomField>
    <fullName>SalesRep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Sales Rep who owns the Invoice</description>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>