BradkenProduction/force-app/main/default/objects/Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Represents the status of the Invoice</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Due Within 7 Days</fullName>
            </value>
            <value>
                <fullName>Overdue - Unexplained</fullName>
            </value>
            <value>
                <fullName>Awaiting Customer Response</fullName>
            </value>
            <value>
                <fullName>Customer Dispute Quality</fullName>
            </value>
            <value>
                <fullName>Customer Dispute Payment Terms</fullName>
            </value>
            <value>
                <fullName>Payment Date Confirmed</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>