BradkenProduction/force-app/main/default/objects/Invoice__c/fields/TotalInvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalInvoiceAmount__c</fullName>
    <description>The total amount of the Invoice</description>
    <label>Total Invoice Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>