BradkenProduction/force-app/main/default/objects/Invoice__c/fields/TotalInvoiceAmountAUD__c.field-meta.xml
<CustomField>
    <fullName>TotalInvoiceAmountAUD__c</fullName>
    <description>Total Invoice Amount converted to AUD per the current exchange rate</description>
    <formula>TotalInvoiceAmount__c/CURRENCYRATE(TEXT(CurrencyIsoCode))</formula>
    <label>Total Invoice Amount (AUD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>