BradkenProduction/force-app/main/default/objects/Invoice__c/fields/TotalInvoiceAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalInvoiceAmountLocal__c</fullName>
    <description>Concatenate Local Currency Code and the Invoice Amount in Local currency</description>
    <formula>CurrencyCodeLocal__c + &quot; &quot; + TEXT(InvoiceAmountinLocal__c)</formula>
    <label>Total Invoice Amount (Local)</label>
    <type>Text</type>
</CustomField>