BradkenProduction/force-app/main/default/objects/Invoice__c/fields/TotalOutstandingAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalOutstandingAmount__c</fullName>
    <description>The outstanding amount for the Invoice. Payment worth this amount is yet to be received from the Customer for this Invoice</description>
    <label>Total Outstanding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>