BradkenProduction/force-app/main/default/objects/Invoice__c/fields/TotalOutstandingAmountAUD__c.field-meta.xml
<CustomField>
    <fullName>TotalOutstandingAmountAUD__c</fullName>
    <description>Total Outstanding Amount converted to AUD per the current exchange rate</description>
    <formula>TotalOutstandingAmount__c/CURRENCYRATE(TEXT(CurrencyIsoCode))</formula>
    <label>Total Outstanding Amount (AUD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>