BradkenProduction/force-app/main/default/objects/Invoice__c/fields/TotalOutstandingAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalOutstandingAmountLocal__c</fullName>
    <description>Concatenate Local Currency Code and the Outstanding Invoice Amount in Local currency</description>
    <formula>CurrencyCodeLocal__c + &quot; &quot; + TEXT(OutstandingAmountinLocal__c)</formula>
    <label>Total Outstanding Amount (Local)</label>
    <type>Text</type>
</CustomField>