BradkenProduction/force-app/main/default/objects/Invoice__c/fields/UnibisDocID__c.field-meta.xml
<CustomField>
    <fullName>UnibisDocID__c</fullName>
    <description>This is the unique ID of the document (Invoice) sent from Unibis. It is a combination of Unibis Country (first three characters) followed by the Document ID of the Invoice followed by the &apos;Apply To&apos; ID.</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique Identifier from Unibis</inlineHelpText>
    <label>Unibis Doc ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>