BradkenProduction/force-app/main/default/objects/Invoice__c/fields/UnibisOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>UnibisOrderNumber__c</fullName>
    <description>Unibis Sales Order Number</description>
    <formula>UnibisSalesOrder__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unibis Order Number</label>
    <type>Text</type>
</CustomField>