BradkenProduction/force-app/main/default/objects/Invoice__c/fields/UnibisSalesOrder__c.field-meta.xml
<CustomField>
    <fullName>UnibisSalesOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Sales Order Number from Unibis</description>
    <label>SF Sales Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>