BradkenProduction/force-app/main/default/objects/Invoice__c/validationRules/Disallow_Manual_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Disallow_Manual_Update</fullName>
    <active>true</active>
    <description>Disallow manually updating the Invoice status to &apos;Paid&apos;</description>
    <errorConditionFormula>AND
(
  ISCHANGED(Status__c),
  ISPICKVAL(Status__c, &quot;Paid&quot;),
  $Profile.Name &lt;&gt; &quot;Integration&quot;
)</errorConditionFormula>
    <errorMessage>Invoice cannot be manually updated to &apos;Paid&apos;</errorMessage>
</ValidationRule>