BradkenProduction/force-app/main/default/objects/Invoice__c/validationRules/Expected_Payment_Date_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Expected_Payment_Date_Mandatory</fullName>
    <active>true</active>
    <description>Expected Payment Date is mandatory when the invoice status is updated to &apos;Payment Date Confirmed&apos;</description>
    <errorConditionFormula>AND
(
    ISPICKVAL(Status__c , &apos;Payment Date Confirmed&apos;),
    ISBLANK(ExpectedPaymentDate__c)
)</errorConditionFormula>
    <errorMessage>Please enter Payment Date confirmed by the Customer</errorMessage>
</ValidationRule>