BradkenProduction/force-app/main/default/objects/Invoice__c/validationRules/Paid_Invoice_Modification_not_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Paid_Invoice_Modification_not_allowed</fullName>
    <active>true</active>
    <description>Do not allow users to modify a Paid invoice</description>
    <errorConditionFormula>AND
(
    RecordLocked__c,
    $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
    $Profile.Name &lt;&gt; &apos;Integration&apos;
)</errorConditionFormula>
    <errorMessage>Paid Invoice cannot be modified</errorMessage>
</ValidationRule>