BradkenProduction/force-app/main/default/objects/Invoice__c/listViews/Ainsley_s_invoices.listView-meta.xml
<ListView>
    <fullName>Ainsley_s_invoices</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>DueDate__c</columns>
    <columns>ExpectedPaymentDate__c</columns>
    <columns>PaidDate__c</columns>
    <columns>Status__c</columns>
    <columns>InternalComments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Paid</value>
    </filters>
    <filters>
        <field>SalesRep__c</field>
        <operation>equals</operation>
        <value>Ainsley Barber</value>
    </filters>
    <label>Ainsley&apos;s invoices</label>
</ListView>