BradkenProduction/force-app/main/default/objects/Invoice__c/listViews/Angga_s_Open_Invoices.listView-meta.xml
<ListView>
    <fullName>Angga_s_Open_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>DueDate__c</columns>
    <columns>Status__c</columns>
    <columns>ExpectedPaymentDate__c</columns>
    <columns>InvoiceAmountinLocal__c</columns>
    <columns>TotalInvoiceAmountLocal__c</columns>
    <columns>InternalComments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SalesRep__c</field>
        <operation>equals</operation>
        <value>Angga Pakolo</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Paid</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Invoice__c.Invoice</value>
    </filters>
    <label>Angga&apos;s Open Invoices</label>
</ListView>