BradkenProduction/force-app/main/default/objects/Invoice__c/listViews/angga_s_outstanding_invoices.listView-meta.xml
<ListView>
    <fullName>angga_s_outstanding_invoices</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>angga&apos;s outstanding invoices</label>
</ListView>