BradkenProduction/force-app/main/default/objects/Invoice__c/listViews/Angga_s_Overdue_Imvoice.listView-meta.xml
<ListView>
    <fullName>Angga_s_Overdue_Imvoice</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>DueDate__c</columns>
    <columns>ExpectedPaymentDate__c</columns>
    <columns>Status__c</columns>
    <columns>UnibisSalesOrderHyperlink__c</columns>
    <columns>TotalOutstandingAmountLocal__c</columns>
    <columns>InternalComments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SalesRep__c</field>
        <operation>equals</operation>
        <value>Angga Pakolo</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Paid</value>
    </filters>
    <label>Angga&apos;s Overdue Invoices</label>
</ListView>