BradkenProduction/force-app/main/default/objects/Invoice__c/listViews/Anton_s_Outstanding_Invoices.listView-meta.xml
<ListView>
    <fullName>Anton_s_Outstanding_Invoices</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>DueDate__c</columns>
    <columns>ExpectedPaymentDate__c</columns>
    <columns>Status__c</columns>
    <columns>TotalInvoiceAmountLocal__c</columns>
    <columns>InternalComments__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Paid</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Invoice__c.Invoice</value>
    </filters>
    <label>Anton&apos;s Outstanding Invoices</label>
</ListView>