BradkenProduction/force-app/main/default/objects/Invoice__c/listViews/Ariel_s_invoice.listView-meta.xml
<ListView>
    <fullName>Ariel_s_invoice</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Debtors_Bucket_Label_2__c</columns>
    <columns>Debtors_Bucket_Label_3__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Paid</value>
    </filters>
    <filters>
        <field>SalesRep__c</field>
        <operation>equals</operation>
        <value>Ariel Soto</value>
    </filters>
    <label>Ariel´s open invoice</label>
</ListView>