BradkenProduction/force-app/main/default/objects/Invoice__c/listViews/Aymerie_s_Open_Invoices.listView-meta.xml
<ListView>
    <fullName>Aymerie_s_Open_Invoices</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SalesRep__c</field>
        <operation>equals</operation>
        <value>Aymerie Lefebvre</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Paid</value>
    </filters>
    <label>Aymerie&apos;s Open Invoices</label>
</ListView>