BradkenProduction/force-app/main/default/objects/Invoice__c/listViews/bambang.listView-meta.xml
<ListView>
    <fullName>bambang</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>DueDate__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SalesRep__c</field>
        <operation>equals</operation>
        <value>Bambang Basori</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Paid</value>
    </filters>
    <label>Bambang&apos;s open invoices</label>
</ListView>