BradkenProduction/force-app/main/default/objects/Invoice__c/listViews/Brenden_Out_Invoices.listView-meta.xml
<ListView>
    <fullName>Brenden_Out_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>DueDate__c</columns>
    <columns>Status__c</columns>
    <columns>ExpectedPaymentDate__c</columns>
    <columns>InternalComments__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Paid</value>
    </filters>
    <label>Brenden Out Invoices</label>
</ListView>