BradkenProduction/force-app/main/default/objects/Invoice__c/listViews/Brett_Albury_s_open_invoices.listView-meta.xml
<ListView>
    <fullName>Brett_Albury_s_open_invoices</fullName>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>TotalOutstandingAmountLocal__c</columns>
    <columns>DueDate__c</columns>
    <columns>Status__c</columns>
    <columns>ExpectedPaymentDate__c</columns>
    <columns>InternalComments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Paid</value>
    </filters>
    <filters>
        <field>SalesRep__c</field>
        <operation>equals</operation>
        <value>Brett Albury</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Invoice__c.Invoice</value>
    </filters>
    <label>Brett Albury&apos;s open invoices</label>
</ListView>