BradkenProduction/force-app/main/default/objects/Invoice__c/listViews/Copy_of_Copy_of_All_DM.listView-meta.xml
<ListView>
    <fullName>Copy_of_Copy_of_All_DM</fullName>
    <columns>SalesRep__c</columns>
    <columns>BusinessUnit__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>TotalInvoiceAmount__c</columns>
    <columns>TotalOutstandingAmount__c</columns>
    <columns>DueDate__c</columns>
    <columns>ExpectedPaymentDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SalesRep__c</field>
        <operation>equals</operation>
        <value>dale murphy</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Due Within 7 Days,Overdue - Unexplained,Awaiting Customer Response,Customer Dispute Quality,Customer Dispute Payment Terms,Payment Date Confirmed</value>
    </filters>
    <label>63DM</label>
</ListView>